--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="https://assets.onecompiler.app/43c9b5n2j/43cbpt4tw/IMG_20231129_191334_page-0001.jpg" class="profile-picture">
+            <img src="PRIYANKA.pdf" class="profile-picture">
             <h1>PRIYANKA S</h1>
             <p> Am COMPUTER APPLICATION STUDENT</p>
         </div>
