--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="section-content">
             <center>
                 <h2>Resume</h2>
-                <a href="file:///C:/Users/Admin/Downloads/priyanka%20(2).pdf" target="_blank" class="download-button">Download CV</a>
+                <a href="priyanka (2).pdf" target="_blank" class="download-button">Download CV</a>
             </center>
         </div>
 
